# mathematical-rs

./: .travis.yml  Cargo.toml  LICENSE.txt  README.md
script/: cibuild
src/: lib.rs  main.rs
tests/: lib.rs
